# se-toolkit-lab-7

./: README.md  docker-compose.yml
bot/: Dockerfile  PLAN.md  bot.py  config.py  pyproject.toml  utils.py
bot/handlers/: commands.py  health.py  labs.py  scores.py  start.py  unknown.py
bot/handlers/commands/: __init__.py  health.py  help.py  labs.py  scores.py  stats.py
bot/services/: __init__.py  intent_router.py  llm_client.py  lms_api.py
