[project]
name = "lms-telegram-bot"
version = "0.1.0"
description = "LMS Telegram Bot with LLM intent routing"
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot>=21.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["bot.py", "handlers", "services", "config.py"]